--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,22 +14,11 @@
   "rules": {
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
-    "no-unused-vars": "off",
-    "unused-imports/no-unused-imports": "error",
-    "unused-imports/no-unused-vars": [
-      "error",
-      {
-        "vars": "all",
-        "varsIgnorePattern": "^_",
-        "args": "after-used",
-        "argsIgnorePattern": "^_"
-      }
-    ],
+
     "newline-before-return": "error",
     "no-duplicate-imports": "error",
     "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error",
-    "no-console": "error"
+    "simple-import-sort/exports": "error"
   },
   "globals": {
     "React": true,
