--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.58.3"
   }
 }
